ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/CnP_PaaS__Temporary_Contact__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Temporary Contact</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Temporary Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P Temporary Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>