ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__C_P_Data__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P  Data</label>
    <referenceTo>CnP_PaaS__CnPData__c</referenceTo>
    <relationshipName>Temporary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>