ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__CnP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
    <label>C&amp;P Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>