ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Email__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>