ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Installment__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Installment__c</fullName>
    <label>Installment #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>