ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>