ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Map_Account__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Map_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>C&amp;P Temporary Contacts</relationshipLabel>
    <relationshipName>C_P_Temporary_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>