ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Map_Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Map_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Temporary_Contact1</relationshipName>
    <type>Lookup</type>
</CustomField>