ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Master_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Master_Transaction_Number__c</fullName>
    <label>Master Transaction Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>