ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Matching_Company__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Matching_Company__c</fullName>
    <label>Matching Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>