ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Type__c</fullName>
    <description>0 - C&amp;P Temporary Contact,1 - C&amp;P Temporary Attendee Contact, 2 - C&amp;P Temporary Double the Donation Account</description>
    <label>Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>