ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Temporary_Contact__c/fields/CnP_PaaS__Xmldata__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Xmldata__c</fullName>
    <label>Xmldata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>